# MaterialX

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
documents/DeveloperGuide/: CodeExamples.md  MainPage.md
libraries/bxdf/: standard_surface.mtlx  usd_preview_surface.mtlx
libraries/pbrlib/: pbrlib_defs.mtlx
libraries/pbrlib/genmdl/: pbrlib_genmdl_impl.mtlx
libraries/stdlib/: stdlib_defs.mtlx
libraries/stdlib/genmdl/: cm.mdl  hsv.mdl  stdlib_genmdl_cm_impl.mtlx  stdlib_genmdl_impl.mtlx  vectormatrix.mdl
python/Scripts/: genmdl.py
resources/Materials/TestSuite/pbrlib/bsdf/: transmission.mtlx
resources/Materials/TestSuite/pbrlib/surfaceshader/: nodegraph_standardsurface.mtlx
source/JsMaterialX/: .gitignore  CMakeLists.txt  MaterialXCore.js  MaterialXCore.wasm  MaterialXLib.cpp  README.md  binding.html  build.sh  generate_bindings.sh  generate_lib.sh  helpers.js  initMaterialX.js
source/JsMaterialX/JsMaterialXCore/: JsDefinition.cpp  JsDefinition.js  JsDocument.cpp  JsDocument.js  JsElement.cpp  JsElement.js  JsExceptions.cpp  JsGeom.cpp  JsGeom.js  JsInterface.cpp  JsInterface.js  JsLook.cpp  JsLook.js  JsMaterial.cpp  JsMaterial.js  JsNode.cpp  JsNode.js  JsObserver.cpp  JsObserver.js  JsProperty.cpp  JsProperty.js  JsRegisteredVectors.cpp  JsTraversal.cpp  JsTraversal.js  JsTypes.cpp  JsTypes.js  JsUtil.cpp  JsUtil.js  JsValue.cpp  JsValue.js  JsVariant.cpp  JsVariant.js  MaterialXCore.js  MaterialXCore.wasm  helpers.js  index.html  initMaterialX.js
source/JsMaterialX/JsMaterialXCore/test/: JsDefinition.js  JsDocument.js  JsElement.js  JsGeom.js  JsInterface.js  JsLook.js  JsMaterial.js  JsNode.js  JsObserver.js  JsProperty.js  JsTraversal.js  JsTypes.js  JsUtil.js  JsValue.js  JsVariant.js  index.html
source/JsMaterialX/JsMaterialXFormat/: JsXmlIo.cpp  JsXmlIo.js
source/JsMaterialX/JsMaterialXFormat/test/: JsXmlIo.js  codeExamples.html  index.html
source/JsMaterialX/test/: basics.spec.js  codeExamples.spec.js  document.spec.js  main.spec.js  package.json  readXml.spec.js  testHelpers.js  traverseGraph.spec.js
source/MaterialXCore/: Element.h  Interface.h  Node.h
source/MaterialXGenMdl/: MdlShaderGenerator.cpp  MdlShaderGenerator.h  MdlSyntax.cpp  MdlSyntax.h
source/MaterialXGenMdl/Nodes/: CompoundNodeMdl.cpp  CompoundNodeMdl.h
source/MaterialXGenOsl/: OslShaderGenerator.cpp
source/MaterialXGenShader/: ShaderGraph.cpp  ShaderNode.cpp  ShaderNode.h  Syntax.cpp  Syntax.h  TypeDesc.h
source/MaterialXGenShader/Nodes/: SourceCodeNode.cpp
source/MaterialXRenderGlsl/: CMakeLists.txt
source/MaterialXTest/: CMakeLists.txt  GenArnold.cpp  GenGlsl.cpp  GenGlsl.h  GenMdl.cpp  GenMdl.h  GenOgsXml.cpp  GenOgsfx.cpp  GenOsl.cpp  GenOsl.h  GenShaderUtil.cpp  GenShaderUtil.h
source/WasmMaterialX/: MaterialXCore.js  MaterialXCore.wasm  README.md  binding.html
source/WasmMaterialX/WasmMaterialXCore/: MaterialXCore.js  MaterialXCore.wasm  WasmElement.cpp  WasmElement.js  WasmUtil.cpp  WasmUtil.js  jsUtils.js
wasm/: generate_lib.sh
